--- a/src/app/components/viewdetails/viewdetails.component.html
+++ b/src/app/components/viewdetails/viewdetails.component.html
@@ -13,7 +13,7 @@
             </div> -->
             <div class="col-md-4 first">
                     <div id="imageZoom" [ngStyle]="{
-                'background-image': 'url(' + productDetails.image + ')',
+                '--url': 'url(' + productDetails.image + ')',
                 'background-size': 'cover',
                 'background-position': 'center',
                 'background-repeat': 'no-repeat',
