--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -118,7 +118,7 @@
                 <div class="col-md-4 first" *ngFor="let item of allProd">
                     <div class="colum" >
                         <div class="container-img" > 
-                            <img routerLink="/viewdetails" [src]="item?.image" alt="">
+                            <img [routerLink]="['/viewdetails', item.id]" [src]="item?.image" alt="">
                             <div class="icon">
                                 <svg  width="40" height="30" viewBox="0 0 24 24" (click)="addToFavourites(item.id)" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke="black" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
