--- a/src/app/components/favourites/favourites.component.html
+++ b/src/app/components/favourites/favourites.component.html
@@ -23,9 +23,9 @@
                     <button #btnremove (click)="removFav(item.favoriteId, btnremove)" class="btn btn-danger .col-6">Remove </button>
                 </div>
             </div>
+            <!-- <div class="col-md-3"></div>
             <div class="col-md-3"></div>
-            <div class="col-md-3"></div>
-            <div class="col-md-3"></div>
+            <div class="col-md-3"></div> -->
         </div>
         
 </div>
