--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -255,3 +255,101 @@
     opacity: 0.7;
     color: white;
 }
+
+/////////////////////////////////////
+/// 
+ .container-gallary{
+    max-width: 1224px;
+    width: 78%;
+    margin: 20px auto;
+}
+ .container-gallary .container-img{
+    columns:3 150px;
+    gap: 15px;
+}
+.container-gallary .container-img .cont{
+    position: relative;
+    cursor: pointer;
+}
+ .container-gallary .container-img .cont img{
+    margin-bottom: 10px;
+    width: 100%;
+}
+ .container-gallary .container-img .cont{
+    &:hover{
+        .icon{
+            visibility: visible;
+            z-index: 10;
+        }
+        .profile{
+            visibility: visible;
+            // background-color: rgba($color: #e4e0e0, $alpha: 0.8);
+            // border-radius: 7%;
+            // padding: 10px;
+            width: auto;
+            z-index: 10;
+        }
+        
+        opacity: 0.8;
+        transition: 0.2s ease;
+   }
+}
+ .container-gallary .container-img .cont .icon{
+    position:absolute;
+    top: 5%;
+    left: 67%;
+    display: flex;
+    gap: 5px;
+    visibility: hidden;
+}
+ .container-gallary .container-img .cont .icon svg{
+    cursor: pointer;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 3px;
+    background-color: #e4e0e0;
+}
+
+.container-gallary .container-img .cont .icon svg:hover{
+    background-color: #ffff;
+}
+ .container-gallary .container-img .cont .profile{
+    position:absolute;
+    bottom: 5%;
+    left: 5%;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    visibility: hidden;
+}
+ .container-gallary .container-img .cont .profile img{
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    object-fit: cover;
+    opacity: 1;
+    z-index: 100;
+}
+
+ .container-gallary .container-img .cont .profile:hover{
+    img{
+        opacity: 1;
+        object-fit: cover;
+    }
+    h5{
+    font-weight:bolder;
+    opacity: 1;
+    }
+}
+
+ .container-gallary .container-img .cont .profile h5{
+    font-weight: bold;
+    font-size: 1.3rem;
+    margin-top: 5px;
+    opacity: 0.7;
+    color: white;
+}
+
+
+
+ 
