--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -35,7 +35,7 @@
                 <a class="navbar-brand" routerLink="home"> <img src="../../../assets/images/logo-no-background.svg" alt=""> </a>
             </div>
             <div class="col-md-2 col-12 mb-3 mt-2 d-flex align-items-center justify-content-center gap-3">
-                @if(userFav){
+                @if(userFav.length >= 1){
                     <svg style="cursor: pointer; outline:none;" routerLink="#" (click)="navigateToSection()"  width="30" height="30" viewBox="0 0 24 24" fill="red" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="white" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
                     </svg>
@@ -100,16 +100,16 @@
                             <a class="nav-link" routerLink="home" routerLinkActive="active-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="#" routerLinkActive="active-link">Woman</a>
+                            <a class="nav-link" routerLink="/woman" routerLinkActive="active-link">Woman</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="#" routerLinkActive="active-link">Men</a>
+                            <a class="nav-link" routerLink="/men" routerLinkActive="active-link">Men</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="#" routerLinkActive="active-link">Baby</a>
+                            <a class="nav-link" routerLink="/baby" routerLinkActive="active-link">Baby</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="#" routerLinkActive="active-link">Sport</a>
+                            <a class="nav-link" routerLink="/sport" routerLinkActive="active-link">Sport</a>
                         </li>
                     </ul>
                 </div>
